Fix dimensions on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 }
 
 html {
-  width: fit-content;
-  height: 100%;
+  /* width: fit-content; */
+  /* height: 100%; */
 }
 
 /* Light Color Scheme */
